tests/e2e/full_string_interpolation_path_accessb.error
Error: syntax error in story at line 2, column 7

2|    b = "foo{a.long.path}"
            ^^^^^^^^^^^

E0131: `Map[any,any]` can't be dot-accessed with `long` of type `string`
