tests/e2e/full_string_interpolation_path_accessb.story
a = {}
b = "foo{a.long.path}"
